// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offline round data entry renders 1`] = `
<div>
  <form>
    <h2
      class="bp3-heading sc-bdVaJa ibVpPq"
    >
      Round 
      1
       Data Entry
    </h2>
    <p>
      When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice from the audited ballots.
    </p>
    <div
      class="bp3-card bp3-elevation-2 sc-bwzfXH hrCotL"
    >
      <h5
        class="bp3-heading"
      >
        Batch: Batch One, Contest: Contest 1
      </h5>
      <label
        class="sc-iwsKbI gesrUq"
        for="results[batch-1][choice-id-1]"
      >
        Votes for 
        Choice One
        :
        <div
          class="sc-htpNat gdpVCF"
        >
          <div
            class="bp3-input-group sc-bxivhb eSUmfF"
          >
            <input
              class="bp3-input"
              id="results[batch-1][choice-id-1]"
              name="results[batch-1][choice-id-1]"
              style="padding-right: 10px;"
              value=""
            />
          </div>
        </div>
      </label>
      <label
        class="sc-iwsKbI gesrUq"
        for="results[batch-1][choice-id-2]"
      >
        Votes for 
        Choice Two
        :
        <div
          class="sc-htpNat gdpVCF"
        >
          <div
            class="bp3-input-group sc-bxivhb eSUmfF"
          >
            <input
              class="bp3-input"
              id="results[batch-1][choice-id-2]"
              name="results[batch-1][choice-id-2]"
              style="padding-right: 10px;"
              value=""
            />
          </div>
        </div>
      </label>
    </div>
    <div
      class="bp3-card bp3-elevation-2 sc-bwzfXH hrCotL"
    >
      <h5
        class="bp3-heading"
      >
        Batch: Batch Two, Contest: Contest 1
      </h5>
      <label
        class="sc-iwsKbI gesrUq"
        for="results[batch-2][choice-id-1]"
      >
        Votes for 
        Choice One
        :
        <div
          class="sc-htpNat gdpVCF"
        >
          <div
            class="bp3-input-group sc-bxivhb eSUmfF"
          >
            <input
              class="bp3-input"
              id="results[batch-2][choice-id-1]"
              name="results[batch-2][choice-id-1]"
              style="padding-right: 10px;"
              value=""
            />
          </div>
        </div>
      </label>
      <label
        class="sc-iwsKbI gesrUq"
        for="results[batch-2][choice-id-2]"
      >
        Votes for 
        Choice Two
        :
        <div
          class="sc-htpNat gdpVCF"
        >
          <div
            class="bp3-input-group sc-bxivhb eSUmfF"
          >
            <input
              class="bp3-input"
              id="results[batch-2][choice-id-2]"
              name="results[batch-2][choice-id-2]"
              style="padding-right: 10px;"
              value=""
            />
          </div>
        </div>
      </label>
    </div>
    <div
      class="bp3-card bp3-elevation-2 sc-bwzfXH hrCotL"
    >
      <h5
        class="bp3-heading"
      >
        Batch: Batch Three, Contest: Contest 1
      </h5>
      <label
        class="sc-iwsKbI gesrUq"
        for="results[batch-3][choice-id-1]"
      >
        Votes for 
        Choice One
        :
        <div
          class="sc-htpNat gdpVCF"
        >
          <div
            class="bp3-input-group sc-bxivhb eSUmfF"
          >
            <input
              class="bp3-input"
              id="results[batch-3][choice-id-1]"
              name="results[batch-3][choice-id-1]"
              style="padding-right: 10px;"
              value=""
            />
          </div>
        </div>
      </label>
      <label
        class="sc-iwsKbI gesrUq"
        for="results[batch-3][choice-id-2]"
      >
        Votes for 
        Choice Two
        :
        <div
          class="sc-htpNat gdpVCF"
        >
          <div
            class="bp3-input-group sc-bxivhb eSUmfF"
          >
            <input
              class="bp3-input"
              id="results[batch-3][choice-id-2]"
              name="results[batch-3][choice-id-2]"
              style="padding-right: 10px;"
              value=""
            />
          </div>
        </div>
      </label>
    </div>
    <button
      class="bp3-button bp3-intent-primary sc-dnqmqq bytmcb sc-htoDjs dESvso"
      type="submit"
    >
      <span
        class="bp3-button-text"
      >
        Submit Data for Round 1
      </span>
    </button>
  </form>
</div>
`;

exports[`offline round data entry submits 1`] = `
<div>
  <form>
    <h2
      class="bp3-heading sc-bdVaJa ibVpPq"
    >
      Round 
      1
       Data Entry
    </h2>
    <p>
      When you have examined all the ballots assigned to you, enter the number of votes recorded for each candidate/choice from the audited ballots.
    </p>
    <div
      class="bp3-card bp3-elevation-2 sc-bwzfXH hrCotL"
    >
      <h5
        class="bp3-heading"
      >
        Batch: Batch One, Contest: Contest 1
      </h5>
      <label
        class="sc-iwsKbI gesrUq"
        for="results[batch-1][choice-id-1]"
      >
        Votes for 
        Choice One
        :
        1
      </label>
      <label
        class="sc-iwsKbI gesrUq"
        for="results[batch-1][choice-id-2]"
      >
        Votes for 
        Choice Two
        :
        2
      </label>
    </div>
    <div
      class="bp3-card bp3-elevation-2 sc-bwzfXH hrCotL"
    >
      <h5
        class="bp3-heading"
      >
        Batch: Batch Two, Contest: Contest 1
      </h5>
      <label
        class="sc-iwsKbI gesrUq"
        for="results[batch-2][choice-id-1]"
      >
        Votes for 
        Choice One
        :
        1
      </label>
      <label
        class="sc-iwsKbI gesrUq"
        for="results[batch-2][choice-id-2]"
      >
        Votes for 
        Choice Two
        :
        2
      </label>
    </div>
    <div
      class="bp3-card bp3-elevation-2 sc-bwzfXH hrCotL"
    >
      <h5
        class="bp3-heading"
      >
        Batch: Batch Three, Contest: Contest 1
      </h5>
      <label
        class="sc-iwsKbI gesrUq"
        for="results[batch-3][choice-id-1]"
      >
        Votes for 
        Choice One
        :
        1
      </label>
      <label
        class="sc-iwsKbI gesrUq"
        for="results[batch-3][choice-id-2]"
      >
        Votes for 
        Choice Two
        :
        2
      </label>
    </div>
    <button
      class="bp3-button bp3-disabled bp3-intent-primary sc-dnqmqq bytmcb sc-htoDjs dESvso"
      disabled=""
      tabindex="-1"
      type="submit"
    >
      <span
        class="bp3-button-text"
      >
        Already Submitted Data for Round 1
      </span>
    </button>
  </form>
</div>
`;
